public/stylesheets/styles.css
@import url("https://fonts.googleapis.com/css?family=Poppins");
.login-splash {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  background: #8abb96;
  border-radius: 5px;
  height: 80%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-top: 0%;
}

.title-login {
  color: white;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.main-title {
  width: 40%;
}

.form-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  background: #8abb96;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  border-radius: inherit;
}

.form {
  margin: 3vh;
}

input[type=text], input[type=password] {
  background-color: #f6f6f6;
  border: none;
  color: #0d0d0d;
  padding: 15px 6px;
  text-align: center;
  display: inline-block;
  font-size: 16px;
  margin: 5px;
  width: 85%;
  overflow: hidden;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  border-radius: 5px 5px 5px 5px;
}

input[type=text], input[type=password]:focus {
  background-color: #fff;
  border-bottom: 2px solid #5fbae9;
}

input[type=submit] {
  background-color: #066fa0b6;
  border: none;
  color: white;
  padding: 15px 80px;
  text-align: center;
  display: inline-block;
  text-transform: uppercase;
  font-size: 13px;
  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
  border-radius: 5px 5px 5px 5px;
  margin: 5px 20px 40px 20px;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

@media only screen and (max-width: 861px) {
  .main-title {
    width: 70%;
  }
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .login-splash {
    width: 100%;
    height: 100%;
  }
  .form-container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}

@media only screen and (max-width: 472px) {
  .main-title {
    width: 100%;
  }
}

.subject-modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
  background-color: rgba(0, 0, 0, 0.4);
}

.edit-subject-modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
  background-color: rgba(0, 0, 0, 0.4);
  display: block;
}

.edit-resource-modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
  background-color: rgba(0, 0, 0, 0.4);
  display: block;
}

.add-resource-modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
  background-color: rgba(0, 0, 0, 0.4);
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border-radius: 6%;
  width: 40%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .modal-content {
    width: 100%;
  }
}

.subject-card {
  border-radius: 15%;
  width: 450px;
  height: 200px;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .subject-card {
    width: 100%;
  }
  .view-btn {
    float: right;
    margin-right: 30px;
  }
}

.resource-card {
  border-radius: 15%;
  height: 30%;
}

.scrollable {
  overflow-y: auto;
}

.subject-buttons-container {
  margin-top: 3%;
  margin-right: 10%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

@media only screen and (max-width: 768px) {
  .subject-buttons-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-top: 5%;
    margin-right: 0;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .resource-card {
    width: 100%;
  }
}

.logo {
  width: 18%;
  height: auto;
  margin-bottom: 35px;
}

.heading-logo {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  width: 40%;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
}

@media only screen and (max-width: 870px) {
  .logo {
    display: none;
  }
}

.gcse-search {
  border-radius: 5px;
  background-color: #8abb96;
  width: 45%;
 
}

.search-container:hover .gcse-search {
  display: unset;
}

@-webkit-keyframes animatedBackground {
  from {
    background-position: 150%;
  }
  to {
    background-position: 200%;
  }
}

@keyframes animatedBackground {
  from {
    background-position: 150%;
  }
  to {
    background-position: 200%;
  }
}

body {
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  background: url(logoscatterbrain.svg);
  font-family: "Poppins", sans-serif;
  background-size: 200%;
  background-position: center;
  background-position: 150%;
  background-repeat: repeat-x;
  -webkit-animation: animatedBackground 60s linear infinite;
          animation: animatedBackground 60s linear infinite;
}

.home {
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  height: 100%;
  width: 100%;
}

header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-line-pack: end;
      align-content: flex-end;
  background-color: #8abb96;
  height: 30vh;
  border-top-right-radius: 30vh;
  border-top-left-radius: 4vh;
}

.heading {
  color: white;
  text-shadow: 2px 2px rgba(46, 86, 62, 0.404);
}

.field {
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  background-color: rgba(255, 255, 255, 0.657);
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.buttons-container {
  margin-top: 3%;
  margin-right: 10%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.mdl-button {
  background-color: #066fa0b6;
  color: black;
}

.util-button {
  color: black;
}

.util-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.search-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

input[type=text] {
  border-bottom: 2px solid rgba(46, 86, 62, 0.404);
}

@media only screen and (max-width: 870px) {
  header {
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
            justify-content: space-evenly;
  }
}

@media only screen and (max-width: 768px) {
  .field {
    width: 100%;
    background-color: white;
  }
  .buttons-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-top: 5%;
    margin-right: 0;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .body {
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    background: rgba(46, 86, 62, 0.404);
    font-family: "Poppins", sans-serif;
  }
}
/*# sourceMappingURL=styles.css.map */

